--- a/css/style.css
+++ b/css/style.css
@@ -695,6 +695,9 @@ footer hr {
 }
 
 @media (max-width: 768px) {
+  .nav,
+  .inquiry,
+  .feedback-link,
   .social-icons,
   .scroll-arrow,
   .feedback-btn,
@@ -706,12 +709,6 @@ footer hr {
     justify-content: space-between;
     padding: 15px;
     align-items: center;
-  }
-
-  .nav,
-  .inquiry,
-  .feedback-link {
-    display: none;
   }
 
   .header-icons {
@@ -742,7 +739,7 @@ footer hr {
     background: none;
     border: none;
     cursor: pointer;
-    z-index: 1;
+    z-index: 101;
   }
 
   .hamburger-line {
@@ -845,15 +842,15 @@ footer hr {
   }
 
   .item.center {
-    transform: translate(-50%, -60%) scale(1.2);
+    transform: translate(-50%, -60%) scale(1.3);
   }
 
   .item.left {
-    transform: translate(-108%, -10%) scale(0.6);
+    transform: translate(-115%, -20%) scale(0.7);
   }
 
   .item.right {
-    transform: translate(10%, -10%) scale(0.6);
+    transform: translate(15%, -20%) scale(0.6);
   }
 
   .social-icons {
@@ -885,7 +882,7 @@ footer hr {
 
   .collection-row {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 0.5fr);
     gap: 10px;
     padding: 20px;
     text-align: center;
@@ -997,7 +994,7 @@ footer hr {
 
   .footer-nav {
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
     align-items: center;
   }
 
@@ -1007,6 +1004,8 @@ footer hr {
     gap: 10px;
     max-width: 400px;
     margin: auto;
+    place-items: center;
+    justify-items: center;
   }
 
   .footer-payments img {
