--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,14 @@ a.icon.search-icon {
   position: absolute;
   transform: translateY(50%);
   z-index: 10;
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 8px 15px;
-  border-radius: 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  /* border-radius: 20px; */
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   text-decoration: none;
   color: #333;
-  font-weight: 600;
-  font-size: 0.9rem;
+  font-weight: 400;
+  font-size: 1.2rem;
   display: inline-flex;
   align-items: center;
   gap: 8px;
