--- a/css/style2.css
+++ b/css/style2.css
@@ -125,7 +125,7 @@ a.icon.search-icon {
   position: absolute;
   top: 68%;
   left: 40%;
-  transform: translate(-300%, 150%);
+  transform: translate(-220%, 150%);
   display: flex;
   gap: 15px;
   z-index: 20;
@@ -212,10 +212,8 @@ a.icon.search-icon {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 30vw;
-  height: 30vh;
-  max-width: 250px;
-  max-height: 250px;
+  width: 250px;
+  height: 250px;
   transform: translate(-50%, -50%);
   cursor: pointer;
   transition: transform 0.6s ease-in-out, opacity 0.6s, z-index 0s 0.3s;
@@ -255,6 +253,7 @@ a.icon.search-icon {
   z-index: 20;
   position: relative;
   transition: opacity 0.5s ease-in-out;
+  padding: 0 20px;
 }
 
 .content-display h2 {
@@ -685,7 +684,7 @@ footer hr {
   display: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .nav,
   .inquiry,
   .feedback-link,
@@ -825,31 +824,30 @@ footer hr {
   }
 
   .hero {
-    height: 90vh;
+    height: 70vh;
   }
 
   .carousel-container {
-    height: 350px;
+    height: 60vh;
+  }
+
+  .item {
+    width: 30vw;
+    height: 30vw;
+    max-width: 200px;
+    max-height: 200px;
   }
 
   .item.center {
-    transform: translate(-50%, -60%) scale(1.3);
+    transform: translate(-50%, -60%) scale(1.8);
   }
 
   .item.left {
-    transform: translate(-180%, -20%) scale(0.7);
+    transform: translate(-130%, -20%) scale(0.9);
   }
 
   .item.right {
-    transform: translate(60%, -20%) scale(0.7);
-  }
-
-  .social-icons {
-    transform: translate(-120%, 150%);
-  }
-
-  .scroll-arrow {
-    transform: translate(20%, 150%);
+    transform: translate(30%, -20%) scale(0.9);
   }
 
   .content-display h2 {
