--- a/css/style2.css
+++ b/css/style2.css
@@ -40,14 +40,25 @@ body {
 }
 
 .header-icons {
+  margin-top: 8px;
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-right: 60px;
 }
 
 .header-icon {
-  font-size: 22px;
+  font-size: 30px;
   color: black;
+}
+
+.inquiry {
+  font-size: 22px;
+}
+
+.feedback {
+  color: #808080;
+  font-size: 22px;
 }
 
 a.icon.search-icon {
@@ -56,14 +67,14 @@ a.icon.search-icon {
 
 .nav {
   display: flex;
-  gap: 32px;
+  gap: 20px;
 }
 
 .nav a {
   text-decoration: none;
   color: #181818;
-  font-size: 1.1em;
-  font-weight: 500;
+  font-size: 20px;
+  font-weight: 400;
   padding-bottom: 4px;
 }
 
@@ -103,10 +114,10 @@ a.icon.search-icon {
   text-decoration: none;
   color: #333;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: inline-flex;
   align-items: center;
-  gap: 8px;
+  gap: 15px;
 }
 
 .inquiry-btn {
@@ -124,7 +135,7 @@ a.icon.search-icon {
 .social-icons {
   position: absolute;
   top: 68%;
-  left: 40%;
+  left: 35%;
   transform: translate(-220%, 150%);
   display: flex;
   gap: 15px;
@@ -137,7 +148,7 @@ a.icon.search-icon {
   align-items: center;
   width: 50px;
   height: 50px;
-  background-color: #555;
+  background-color: #828282;
   color: #f0f0f0;
   border-radius: 50%;
   text-decoration: none;
@@ -157,7 +168,7 @@ a.icon.search-icon {
   transform: translate(200%, 150%);
   width: 50px;
   height: 50px;
-  background-color: #555;
+  background-color: #828282;
   border-radius: 50%;
   color: #f0f0f0;
   font-size: 20px;
@@ -196,7 +207,7 @@ a.icon.search-icon {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 7vw;
-  font-weight: bold;
+  font-weight: 700;
   color: #f0f0f0;
   z-index: 1;
   transition: opacity 0.5s ease-in-out;
@@ -222,7 +233,7 @@ a.icon.search-icon {
 
 .item img {
   width: 100%;
-  height: 100%;
+  height: 90%;
   object-fit: contain;
   filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.1));
 }
@@ -236,18 +247,17 @@ a.icon.search-icon {
 /* --- MODIFIED RULES BELOW --- */
 
 .item.left {
-  transform: translate(-225%, 10%) scale(1);
+  transform: translate(-300%, 10%) scale(1);
   opacity: 0.7;
   z-index: 5;
 }
 
 .item.right {
-  transform: translate(180%, 10%) scale(1);
+  transform: translate(220%, 10%) scale(1);
   opacity: 0.7;
   z-index: 5;
 }
 
-/* --- Content Display (Unchanged) --- */
 .content-display {
   text-align: center;
   z-index: 20;
@@ -265,7 +275,7 @@ a.icon.search-icon {
 .content-display p {
   margin: 8px 0;
   font-size: 1.1em;
-  color: #555;
+  color: #d6d6d6;
 }
 
 #item-price {
@@ -307,7 +317,7 @@ a.icon.search-icon {
 }
 
 .collection-intro h2 {
-  font-size: 1.35em;
+  font-size: 40px;
   font-weight: 700;
   font-style: bold;
   margin-bottom: 10px;
@@ -315,7 +325,7 @@ a.icon.search-icon {
 
 .collection-intro p {
   margin-bottom: 32px;
-  font-size: 40sp;
+  font-size: 20px;
   font-weight: 400;
   color: #929292;
 }
@@ -334,7 +344,7 @@ a.icon.search-icon {
   flex-direction: column;
   align-items: center;
   width: 250px;
-  height: 360px;
+  height: 350px;
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -349,15 +359,15 @@ a.icon.search-icon {
 }
 
 .card-title {
-  padding: 15px;
+  padding: 12px;
   font-size: 1.08em;
   font-weight: bold;
   margin-bottom: 5px;
 }
 
 .card-desc {
-  padding: 15px;
-  font-size: 0.98em;
+  padding: 10px;
+  font-size: 0.75em;
   color: #a68b88;
 }
 
@@ -368,7 +378,7 @@ a.icon.search-icon {
 }
 
 .diamond-section h2 {
-  font-size: 1.2em;
+  font-size: 40px;
   margin-bottom: 6px;
   font-weight: bold;
 }
@@ -379,14 +389,14 @@ a.icon.search-icon {
 }
 
 .diamond-row {
-  width: 100%;
-  height: 450px;
+  height: 350px;
   position: relative;
   perspective: 1500px;
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
 }
 
 .diamond-track {
+  margin-top: 70px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -395,22 +405,16 @@ a.icon.search-icon {
 
 .diamond-card {
   background-color: #fff;
-  box-shadow: 0 8px 32px rgba(230, 200, 195, 0.17);
+  box-shadow: 0 8px 32px rgba(200, 200, 200, 0.15);
+  border: 1px solid #dfdfdf;
+  padding: 1.5rem 1rem;
+  width: 200px;
+  height: 250px;
+  position: absolute;
   top: 50%;
   left: 50%;
-  width: 170px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
-  user-select: none;
-  z-index: 1;
-  text-align: center;
-  position: absolute;
-  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out,
-    z-index 0s 0.25s;
-  border: 1px solid #dfdfdf;
+  transition: transform 0.6s ease-in-out;
 }
 
 .diamond-card img {
@@ -433,7 +437,6 @@ a.icon.search-icon {
 }
 
 .diamond-card hr {
-  width: 100%;
   height: 1px;
   background-color: #dfdfdf;
   border: none;
@@ -448,19 +451,19 @@ a.icon.search-icon {
 .is-right-1 {
   transform: translate(-50%, -50%) translateX(180px) translateZ(-150px)
     rotateY(-35deg);
-  opacity: 0.8;
+  opacity: 0.9;
   z-index: 9;
 }
 
 .is-right-2 {
-  transform: translate(-50%, -50%) translateX(320px) translateZ(-300px)
+  transform: translate(-50%, -50%) translateX(370px) translateZ(-300px)
     rotateY(-40deg);
   opacity: 0.8;
   z-index: 8;
 }
 
 .is-right-3 {
-  transform: translate(-50%, -50%) translateX(460px) translateZ(-450px)
+  transform: translate(-50%, -50%) translateX(580px) translateZ(-450px)
     rotateY(-45deg);
   opacity: 0.8;
   z-index: 7;
@@ -474,14 +477,14 @@ a.icon.search-icon {
 }
 
 .is-left-2 {
-  transform: translate(-50%, -50%) translateX(-320px) translateZ(-300px)
+  transform: translate(-50%, -50%) translateX(-370px) translateZ(-300px)
     rotateY(40deg);
   opacity: 0.8;
   z-index: 8;
 }
 
 .is-left-3 {
-  transform: translate(-50%, -50%) translateX(-460px) translateZ(-450px)
+  transform: translate(-50%, -50%) translateX(-580px) translateZ(-450px)
     rotateY(45deg);
   opacity: 0.8;
   z-index: 7;
@@ -500,8 +503,8 @@ a.icon.search-icon {
 }
 
 .dot {
-  width: 12px;
-  height: 12px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: #dcdcdc;
   border: none;
@@ -531,10 +534,12 @@ a.icon.search-icon {
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
+  margin-bottom: 210px;
 }
 
 .signup-left h2 {
-  font-size: 2.5em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 40px;
   font-weight: 700;
   margin-bottom: 6px;
 }
@@ -614,8 +619,9 @@ footer {
 footer hr {
   background: #c2c2c2;
   height: 1px;
-  margin-left: 190px;
-  margin-right: 190px;
+  /* margin-left: 170px;
+  margin-right: 170px; */
+  width: 1000px;
 }
 
 .footer-logo img {
@@ -630,16 +636,16 @@ footer hr {
 }
 
 .trust {
-  font-size: 20px;
-  font-weight: 350;
+  font-size: 15px;
+  font-weight: 500;
   color: #f7b79d;
 }
 
 .footer-desc {
   margin: 14px auto 18px auto;
   color: #929292;
-  font-weight: 400;
-  max-width: 500px;
+  font-weight: 500;
+  max-width: 600px;
 }
 
 .footer-nav {
@@ -653,6 +659,7 @@ footer hr {
 .footer-nav a {
   color: #929292;
   text-decoration: none;
+  font-weight: 500;
 }
 
 .footer-payments {
@@ -673,9 +680,9 @@ footer hr {
   color: #929292;
   font-size: 12px;
   margin: 28px auto 18px auto;
-  max-width: 850px;
+  max-width: 1000px;
   font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -908,7 +915,8 @@ footer hr {
   }
 
   .diamond-card {
-    width: 150px;
+    width: 160px;
+    height: 250px;
   }
 
   .is-active .card-desc {
@@ -917,28 +925,13 @@ footer hr {
 
   /* Adjusted 3D positions for smaller screens */
   .is-right-1 {
-    transform: translate(-50%, -50%) translateX(100px) translateZ(-80px)
+    transform: translate(-50%, -50%) translateX(180px) translateZ(-80px)
       rotateY(-40deg);
   }
 
-  .is-right-2 {
-    transform: translate(-50%, -50%) translateX(180px) translateZ(-150px)
-      rotateY(-45deg);
-  }
-
   .is-left-1 {
-    transform: translate(-50%, -50%) translateX(-100px) translateZ(-80px)
+    transform: translate(-50%, -50%) translateX(-180px) translateZ(-80px)
       rotateY(40deg);
-  }
-
-  .is-left-2 {
-    transform: translate(-50%, -50%) translateX(-180px) translateZ(-150px)
-      rotateY(45deg);
-  }
-
-  .is-right-3,
-  .is-left-3 {
-    display: none;
   }
 
   .signup-section {
