--- a/css/style2.css
+++ b/css/style2.css
@@ -404,12 +404,12 @@ a.icon.search-icon {
 }
 
 .diamond-card {
-  background-color: #fff;
+  background-color: #f4f4f4;
   box-shadow: 0 8px 32px rgba(200, 200, 200, 0.15);
   border: 1px solid #dfdfdf;
-  padding: 1.5rem 1rem;
-  width: 200px;
-  height: 250px;
+  padding: 1.5rem 0rem;
+  width: 240px;
+  height: 280px;
   position: absolute;
   top: 50%;
   left: 50%;
