--- a/css/style2.css
+++ b/css/style2.css
@@ -45,11 +45,7 @@ body {
   align-items: center;
   gap: 20px;
   margin-right: 60px;
-}
-
-.header-icon {
   font-size: 30px;
-  color: black;
 }
 
 .inquiry {
@@ -80,14 +76,6 @@ a.icon.search-icon {
 
 .nav a.active {
   font-weight: 700;
-}
-
-.icon {
-  display: inline-block;
-  background-image: url("../assests/icons/spritesheet.png");
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
 }
 
 .serach-icon {
@@ -231,6 +219,17 @@ a.icon.search-icon {
   z-index: 5;
 }
 
+.vintage-image {
+  width: 300px;
+  height: 400px;
+}
+
+.pave-image {
+  margin-right: 40px;
+  width: 300px;
+  height: 400px;
+}
+
 .item img {
   width: 100%;
   height: 90%;
@@ -247,13 +246,13 @@ a.icon.search-icon {
 /* --- MODIFIED RULES BELOW --- */
 
 .item.left {
-  transform: translate(-300%, 10%) scale(1);
+  transform: translate(-260%, -10%) scale(1);
   opacity: 0.7;
   z-index: 5;
 }
 
 .item.right {
-  transform: translate(220%, 10%) scale(1);
+  transform: translate(160%, -10%) scale(1);
   opacity: 0.7;
   z-index: 5;
 }
@@ -396,7 +395,7 @@ a.icon.search-icon {
 }
 
 .diamond-track {
-  margin-top: 70px;
+  margin-top: 80px;
   width: 100%;
   height: 100%;
   position: relative;
@@ -665,7 +664,7 @@ footer hr {
 .footer-payments {
   margin: 70px auto 10px auto;
   display: flex;
-  gap: 16px;
+  gap: 25px;
   justify-content: center;
   align-items: center;
 }
@@ -673,7 +672,6 @@ footer hr {
 .footer-payments img {
   width: 100px;
   vertical-align: middle;
-  opacity: 0.7;
 }
 
 .footer-bottom {
@@ -711,6 +709,7 @@ footer hr {
   .header-icons {
     display: flex;
     gap: 10px;
+    margin-right: 0px;
   }
 
   #favourite {
@@ -915,7 +914,7 @@ footer hr {
   }
 
   .diamond-card {
-    width: 160px;
+    width: 180px;
     height: 250px;
   }
 
@@ -925,13 +924,24 @@ footer hr {
 
   /* Adjusted 3D positions for smaller screens */
   .is-right-1 {
-    transform: translate(-50%, -50%) translateX(180px) translateZ(-80px)
+    transform: translate(-50%, -50%) translateX(150px) translateZ(-80px)
       rotateY(-40deg);
   }
 
   .is-left-1 {
-    transform: translate(-50%, -50%) translateX(-180px) translateZ(-80px)
+    transform: translate(-50%, -50%) translateX(-150px) translateZ(-80px)
       rotateY(40deg);
+  }
+
+  .carousel-dots .dot:nth-child(n + 4) {
+    display: none;
+  }
+
+  .is-right-2,
+  .is-right-3,
+  .is-left-2,
+  .is-left-3 {
+    display: none;
   }
 
   .signup-section {
