Adjusted Collection card Height

--- a/css/style2.css
+++ b/css/style2.css
@@ -890,7 +890,7 @@ footer {
 
   .collection-card {
     width: 45vw;
-    height: 33vh;
+    height: auto;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
